文本编辑器：修改前端，添加编辑文本和保存文本方法。