@@ -17,6 +17,7 @@ import scau.os.soos.module.device.view.DeviceReadView;
 
 import java.io.IOException;
 import java.util.Map;
+import java.util.NoSuchElementException;
 
 public class DeviceService implements TaskManagerService {
     private final ScrollPane detailContainer;
@@ -105,7 +106,13 @@ public class DeviceService implements TaskManagerService {
         DeviceOverviewReadView overviewReadView = DeviceController.getInstance().getOverview();
         overviewSeries.getData().add(new XYChart.Data<>(String.valueOf(OS.clock.get()), overviewReadView.usage()));
         if (overviewSeries.getData().size() > 60) {
-            overviewSeries.getData().removeFirst();
+//            overviewSeries.getData().removeFirst();
+            if (overviewSeries.getData().isEmpty()) {
+                throw new NoSuchElementException();
+            } else {
+                overviewSeries.getData().remove(0);
+            }
+
         }
         overview.setText(String.format("%d/8台", overviewReadView.usage()));
     }
@@ -118,7 +125,7 @@ public class DeviceService implements TaskManagerService {
         using.setText(String.join(";", data.waiting().stream().map(String::valueOf).toList()));
         series.getData().add(new XYChart.Data<>(String.valueOf(OS.clock.get()), data.usage()));
         if (overviewSeries.getData().size() > 60) {
-            overviewSeries.getData().removeFirst();
+            //overviewSeries.getData().removeFirst();
         }
     }
 }
