@@ -19,6 +19,7 @@ import scau.os.soos.module.process.model.PCB;
 import scau.os.soos.module.process.model.Process;
 
 import java.io.IOException;
+import java.util.NoSuchElementException;
 import java.util.Random;
 
 public class MemoryService implements TaskManagerService {
@@ -90,7 +91,12 @@ public class MemoryService implements TaskManagerService {
         MemoryReadView memoryData = MemoryController.getInstance().getData();
         overviewSeries.getData().add(new XYChart.Data<>(String.valueOf(OS.clock.get()), memoryData.usage()));
         if (overviewSeries.getData().size() > 60) {
-            overviewSeries.getData().removeFirst();
+            //overviewSeries.getData().removeFirst();
+            if (overviewSeries.getData().isEmpty()) {
+                throw new NoSuchElementException();
+            } else {
+                overviewSeries.getData().remove(0);
+            }
         }
         overview.setText(String.format("%d/%dB (%d%%)", memoryData.usage(), memoryData.total(), memoryData.usage() / memoryData.total()));
     }
